# feplot

./: .pypirc  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
feplot/: __init__.py  _helpers.py  _plotter.py  _xdmf.py  entities.py  helpers.py  pylab.py  tools.py
tests/: test_2d_3d_plotting.py  test_plot_model.py  test_views.py  test_xdmf.py
