
[metadata]
name = feplot
version = 0.1.12
author = Mohamed ZAARAOUI
author_email = mohamed.zaaraoui.999@gmail.com
description = A visualization tool for FElupe
description-file = README.md
url = https://github.com/ZAARAOUI999/feplot
project_urls =
    Code=https://github.com/ZAARAOUI999/feplot
    Issues=https://github.com/ZAARAOUI999/feplot/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Utilities

[options]
packages = find:
install_requires =
    felupe
    numpy
    meshio
    pyvista
    pyvistaqt
python_requires = >=3.7
